k8s/ab-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  labels:
    app: helloworld-node
    version: v1
spec:
  selector:
    matchLabels:
      app: helloworld-node
      version: v1
  template:
    metadata:
      labels:
        app: helloworld-node
        version: v1
    spec:
      containers:
      - name: helloworld-node
        image: hashicorp/http-echo:latest
        args: ["-listen=:8080", "-text=Hello from hello-v1!"] 
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  labels:
    pp: helloworld-node
    version: v2
spec:
  selector:
    matchLabels:
      app: helloworld-node
      version: v2
  template:
    metadata:
      labels:
        app: helloworld-node
        version: v2
    spec:
      containers:
      - name: helloworld-node
        image: hashicorp/http-echo:latest
        args: ["-listen=:8080", "-text=Hello from hello-v1!"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
# Service for hello-v1 Deployment, annotated to use the BackendConfig
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service-v1
  annotations:
    cloud.google.com/backend-config: '{"default": "helloworld-backend-config"}'
spec:
  selector:
    app: helloworld-node
    version: v1 # This service only targets v1 pods
  ports:
    - protocol: TCP
      name: http # Name the port for BackendConfig reference
      port: 80
      targetPort: 8080
  type: ClusterIP
---
# Service for hello-v2 Deployment (no BackendConfig annotation needed here)
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service-v2
spec:
  selector:
    app: helloworld-node
    version: v2
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    spec.ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: helloworld-service-v1
      port:
        number: 80
