k8s/mini-ab-test.yaml
# app-deployment-minikube.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  labels:
    app: helloworld-node
    version: v1
spec:
  selector:
    matchLabels:
      app: helloworld-node
      version: v1
  template:
    metadata:
      labels:
        app: helloworld-node
        version: v1
    spec:
      containers:
      - name: helloworld-node
        image: hashicorp/http-echo:latest # <-- CHANGED IMAGE
        args: ["-listen=:8080", "-text=Hello from hello-v1!"] # <-- CUSTOM OUTPUT
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  labels:
    app: helloworld-node
    version: v2
spec:
  selector:
    matchLabels:
      app: helloworld-node
      version: v2
  template:
    metadata:
      labels:
        app: helloworld-node
        version: v2
    spec:
      containers:
      - name: helloworld-node
        image: hashicorp/http-echo:latest # <-- CHANGED IMAGE
        args: ["-listen=:8080", "-text=Hello from hello-v2!"] # <-- CUSTOM OUTPUT
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service
            port:
              number: 80
